--- a/cinesasprint/css/estilo.css
+++ b/cinesasprint/css/estilo.css
@@ -342,7 +342,7 @@ footer {
 .fotos{
   overflow-y: hidden;
   height: 100%;
-  background-color: #d5d5d5;
+  background-color: white;
   padding-right: 40px;
   
 }
